Add of checking step for the repo

--- a/.github/workflows/first-actions.yml
+++ b/.github/workflows/first-actions.yml
@@ -4,6 +4,8 @@ jobs:
     first-job:
         runs-on: ubuntu-latest
         steps:
+            - name: checking repo
+              uses: actions/checkout@v5
             - name: welcome message
               run: echo "My first github actions jobs"
 
