--- a/.github/workflows/first-actions.yml
+++ b/.github/workflows/first-actions.yml
@@ -4,13 +4,11 @@ jobs:
     first-job:
         runs-on: ubuntu-latest
         steps:
-            - name: checking repo
+            - name: Checking repo
               uses: actions/checkout@v5
-            - name: welcome message
+            - name: List and read files
               run: echo "My first github actions jobs"
-
-            - name: list files
-              run: ls
-
-            - name: read file
-              run: cat readme.md
+                   ls
+                   cat readme.md
+            - name: Generate ASCII artwork
+              run: cowsay -f dragon "Run for cover, i'am dragon" >> dragon.txt
